nodejs-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: mongotest
          image: dmytrogorbunov/mongotest:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: node-logs
              mountPath: /var/log/nodeapp/

        - name: filebeat-sidecar
          image: docker.elastic.co/beats/filebeat:7.15.2
          volumeMounts:
            - name: node-logs
              mountPath: /var/log/nodeapp/
            - name: filebeat-config
              mountPath: /usr/share/filebeat/filebeat.yml
              subPath: filebeat.yml 
      volumes:
        - name: node-logs
          emptyDir: {}
        - name: filebeat-config
          configMap:
            name: filebeat-configmap
            items:
              - key: filebeat.yml
                path: filebeat.yml
