nodejs-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-svc
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: nodejs-app
