nodejs-app/ingress-config.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  defaultBackend:
    service:
      name: hostname-svc
      port:
        number: 80

  ingressClassName: nginx

  rules:
  - host: test.host.com
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: nodejs-svc
            port:
              number: 80

      - path: /newapi
        pathType: Prefix
        backend:
          service:
            name: newapi-svc
            port:
              number: 80

  - host: ac95cbc15ae634757ace46f5b3cab18e-1147114267.eu-central-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-release-kibana
            port:
              number: 5601
