nodejs-app/network-policy-mongodb.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nodejs-app
    - podSelector:
        matchLabels:
          app: new-api-app
